--- a/polymer-micro.html
+++ b/polymer-micro.html
@@ -32,6 +32,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       this._prepConstructor();
       // fast access to property info
       this._prepPropertyInfo();
+      // registration extension point
+      this._doBehavior('registered');
     },
 
     _prepBehavior: function(b) {
