--- a/polymer-mini.html
+++ b/polymer-mini.html
@@ -35,6 +35,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       this._prepShady();
       // fast access to property info
       this._prepPropertyInfo();
+      // registration extension point
+      this._doBehavior('registered');
     },
 
     _prepBehavior: function(b) {
