--- a/polymer.html
+++ b/polymer.html
@@ -30,6 +30,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       this._prepIs();
       // factory
       this._prepConstructor();
+    },
+
+    _registerLazyFeatures: function() {
       // template
       this._prepTemplate();
       // styles
@@ -48,6 +51,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       this._prepBindings();
       // dom encapsulation
       this._prepShady();
+      // registration extension point
+      this._doBehavior('registered');
     },
 
     _prepBehavior: function(b) {
