--- a/src/lib/base.html
+++ b/src/lib/base.html
@@ -28,14 +28,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       this._desugarBehaviors(); // abstract
       this._doBehavior('beforeRegister'); // abstract
       this._registerFeatures();  // abstract
-      this._doBehavior('registered'); // abstract
+      if (!Polymer.Settings.lazyRegistration) {
+        this._ensureRegistered(this);
+      }
     },
 
     createdCallback: function() {
+      if (Polymer.Settings.lazyRegistration) {
+        this._ensureRegistered(Object.getPrototypeOf(this));
+      }
       Polymer.telemetry.instanceCount++;
       this.root = this;
       this._doBehavior('created'); // abstract
       this._initFeatures(); // abstract
+    },
+
+    _ensureRegistered: function(proto) {
+      if (!proto.__hasLazyRegistered) {
+        proto.__hasLazyRegistered = true;
+        if (proto._registerLazyFeatures) {
+          proto._registerLazyFeatures();
+        }
+      }
     },
 
     // reserved for canonical behavior
